# shareshot

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  meson.build  meson_options.txt
build-aux/: dev.lennoxlotl.ShareShot.Devel.json
data/: dev.lennoxlotl.ShareShot.desktop.in.in  dev.lennoxlotl.ShareShot.gschema.xml.in  dev.lennoxlotl.ShareShot.metainfo.xml.in.in
data/resources/: resources.gresource.xml
data/resources/ui/: window.ui
po/: POTFILES.in
src/: capture.rs  config.rs  error.rs  image.rs  main.rs  parser.rs  upload.rs
src/application/: general.rs  mod.rs  tray.rs  upload.rs
src/application/factory/: header.rs
src/application/ui/: settings.rs
src/dbus/: client.rs  service.rs
src/upload/: mod.rs  request.rs  upload_request.rs
