[package]
authors = ["Lennox Schneider <admin@lennoxlotl.dev>"]
edition = "2021"
name = "shareshot"
version = "0.0.1"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
gtk4 = "0.9.5"
log = "0.4.22"
pretty_env_logger = "0.5.0"
thiserror = "2.0.10"
tokio = { version = "1.43.0", features = ["full"] }
zbus = "5.2.0"
ksni = "0.3.1"
walkdir = "2.5.0"
ashpd = "0.10.2"
reqwest = { version = "0.12.12", features = ["multipart"] }
urlencoding = "2.1.3"
mime_guess = "2.0.5"
home = "0.5.11"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
regex = "1.11.1"
once_cell = "1.20.2"
serde_json = "1.0.135"
relm4 = { version = "0.9.1", features = ["libadwaita"] }
relm4-components = "0.9.1"

